--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
     <head>
       <title>P&PH DHP World</title>
       <meta charset="UTF-8"/>
+      <style>
+        body {
+          width: 1080px;
+          margin: 0 auto;
+        }
+      </style>
     </head>
     <body>
       <h1><a href="index.html" title="꿈꾸는자들">P&PH</a></h1>
       <h3><a href="http://info.cern.ch" target="_blank" title="원시웹">Cern</a></h3>
       <h3><a href="https://www.hanyang.ac.kr/" target="_blank" title="한양대">냥대</a></h3>
+      <h3><a href="https://www.hanyang.ac.kr/" target="_blank" title="한양대">위키독스</a></h3>
       <h3><a href="https://www.opentutorials.org/" target="_blank" title="프로그래밍공부하자">오픈튜토리얼스</a></h3>
       this web page is including information about People & Programming, Hiphop
       <br><image src=index.jpg width=20%>
@@ -19,6 +26,7 @@
             <li><a href="1.html">Programming</a></li>
             <li>Hiphop</li>
             <li>Dream</li>
+            <li>guitar</li>
           </ol>
           <p style="margin-top:45px;">this page use tag :</p>
           <ol>
