--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1><a href="index.html" title="꿈꾸는자들">P&PH</a></h1>
       <h3><a href="http://info.cern.ch" target="_blank" title="원시웹">Cern</a></h3>
       <h3><a href="https://www.hanyang.ac.kr/" target="_blank" title="한양대">냥대</a></h3>
-      <h3><a href="https://www.hanyang.ac.kr/" target="_blank" title="한양대">위키독스</a></h3>
+      <h3><a href="https://www.hanyang.ac.kr/" target="_blank" title="위키독스">위키독스</a></h3>
       <h3><a href="https://www.opentutorials.org/" target="_blank" title="프로그래밍공부하자">오픈튜토리얼스</a></h3>
       this web page is including information about People & Programming, Hiphop
       <br><image src=index.jpg width=20%>
